--- a/about.html
+++ b/about.html
@@ -144,7 +144,9 @@
       .about-container {
         padding: 0 40px; /* Increased padding for a more spacious layout */
       }
-
+      .socials{
+        display: flex;
+      }
       /* Footer Section */
       /* .footer {
         background-color: #bec1c55c;
@@ -203,7 +205,7 @@
       padding: 0 40px;
     }
 
-
+    
     /* Adding media Queries  */
     @media (min-width: 1980px) {
       .leftabout {
@@ -502,6 +504,7 @@
           </div>
         </div>
         <p class="aboutus-body" id="div3">
+        <br>
           Discover your style with TrendTrove — where fashion meets
           confidence!
         </p>
@@ -539,19 +542,17 @@
               <i class="fa-brands fa-instagram"></i>
             </a>
           </li>
-
-
           <li class="nav-link">
             <a href="login-sginup.html">
             <i class="fa-solid fa-user"></i>
           </a>
-          </li>
+          
           <li class="nav-link">
             <i class="fa-solid fa-magnifying-glass" ></i>
-
-          <li class="tab">
+</li>
+          <!--<li class="tab">
             <a href="features.html">Features</a>
-            <div class="cursor"></div>
+            <div class="cursor"></div>-->
 
         </ul>
       </div>
