--- a/contact.html
+++ b/contact.html
@@ -220,6 +220,8 @@
               goTopBtn.style.display = "none";
           }
       });
+      document.getElementById("cart-icon").addEventListener("click", function() {
+    window.location.href = "cart.html";})
 
   })();
   </script>
@@ -241,9 +243,6 @@
     <script>window.gtranslateSettings = {"default_language":"en","detect_browser_language":true,"wrapper_selector":".gtranslate_wrapper"}</script>
 <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
 
-    document.getElementById("cart-icon").addEventListener("click", function() {
-    window.location.href = "cart.html";
-})
 
     
 </body>
